Added Plotly plotting to Overheating RunApp

--- a/examples/notebooks/00_MakingARunAppWidget.ipynb
+++ b/examples/notebooks/00_MakingARunAppWidget.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,13 +56,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a52543f946de4703a0fa0c1676202b59",
+       "model_id": "9361c7d7ec7341858cf827628cde3f8a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -299,13 +299,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ab49a94423894d6fb93975ec8d50c700",
+       "model_id": "48251cef5bef4be0a6e29df4c6e095ce",
        "version_major": 2,
        "version_minor": 0
       },
@@ -319,7 +319,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "977f0bc5c38d4a958968193ba17d2c44",
+       "model_id": "30615d0d16244ea88643828728dee4d8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -333,7 +333,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "30d00cb4094f475eb9c965b50dfd1c85",
+       "model_id": "c02e6875d1dc4d7cb91e535c82026228",
        "version_major": 2,
        "version_minor": 0
       },
@@ -347,7 +347,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c99068465efa4e1da6f2cf11bd3db685",
+       "model_id": "a34d7d36be1c440580b486d0c1618a27",
        "version_major": 2,
        "version_minor": 0
       },
@@ -361,7 +361,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f5beaa60c625482793cf0fff5ee45a48",
+       "model_id": "a1c4a20c7f89431395ad3da7dbf77535",
        "version_major": 2,
        "version_minor": 0
       },
@@ -375,7 +375,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "570d6fd6b6b94dc0be3a9f37c4553bf7",
+       "model_id": "993138f5ef8c4302a0ffb261119dfa97",
        "version_major": 2,
        "version_minor": 0
       },
@@ -389,7 +389,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4c01078b58414e6ebdf07f5354269fd0",
+       "model_id": "f5420ce72a824b299f9805cc2ba02933",
        "version_major": 2,
        "version_minor": 0
       },
@@ -403,7 +403,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3eb38f9c5e7842769ad5357f9535e8c4",
+       "model_id": "06116591c4ba440d8099e6355b7499f5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,8 @@
       "            }    \n",
       "    \n",
       "        r = RunApp(config) \n",
-      "        from ipyrun._ipyeditjson import EditListOfDicts\n",
+      "        from ipyrun._ipyeditjson import \n",
+      "        \n",
       "        ui = EditListOfDicts(li)\n",
       "        ui\n",
       "        ```\n",
@@ -580,13 +581,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "40aadd5758d04f6bb389ee7f7304dee2",
+       "model_id": "d2e881a881a942bc911a88004b815eac",
        "version_major": 2,
        "version_minor": 0
       },
@@ -600,7 +601,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8c1d378b1c0b4bb987fc33660bfe5640",
+       "model_id": "7d6812b1009147af856f88afd55ecaf3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -633,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +690,9 @@
       "                                               'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\examples\\\\notebooks\\\\appdata\\\\inputs\\\\archive\\\\20200615_2211-jg-inputs-expansion_vessel_sizing.json',\n",
       "                                               'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\examples\\\\notebooks\\\\appdata\\\\inputs\\\\archive\\\\20200616_1020-jg-inputs-expansion_vessel_sizing.json',\n",
       "                                               'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\examples\\\\notebooks\\\\appdata\\\\inputs\\\\archive\\\\20200616_1021-jg-inputs-expansion_vessel_sizing.json',\n",
-      "                                               'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\examples\\\\notebooks\\\\appdata\\\\inputs\\\\archive\\\\20200624_1101-jg-inputs-expansion_vessel_sizing.json']},\n",
+      "                                               'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\examples\\\\notebooks\\\\appdata\\\\inputs\\\\archive\\\\20200624_1101-jg-inputs-expansion_vessel_sizing.json',\n",
+      "                                               'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\examples\\\\notebooks\\\\appdata\\\\inputs\\\\archive\\\\20200626_1609-jg-inputs-expansion_vessel_sizing.json',\n",
+      "                                               'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\examples\\\\notebooks\\\\appdata\\\\inputs\\\\archive\\\\20200630_1358-RW-inputs-expansion_vessel_sizing.json']},\n",
       "                         'template': {'fdir': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\examples\\\\scripts\\\\template_inputs',\n",
       "                                      'fpths': ['C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\examples\\\\scripts\\\\template_inputs\\\\inputs-expansion_vessel_sizing.json']}},\n",
       " 'fpth_log': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\examples\\\\notebooks\\\\appdata\\\\log\\\\log-expansion_vessel_sizing.csv',\n",
@@ -800,13 +803,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ce72593ffe8343ff911a063263d6d1f7",
+       "model_id": "2e57f873b8fb4619bf8541833a0bef4a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -820,7 +823,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "34fb6d381a85455db5be5a32c0003fc9",
+       "model_id": "e0c620c0c0834dcba6b1f5a38553979d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -850,6 +853,13 @@
     "r = RunApp(config)\n",
     "r"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
