--- a/examples/notebooks/overheating/createmodelrun.ipynb
+++ b/examples/notebooks/overheating/createmodelrun.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "NBFDIR = os.path.dirname(os.path.realpath('__file__'))\n",
     "import pandas as pd\n",
-    "from ipyrun.ipyrun import RunAppModelRun, RunApp\n",
+    "from ipyrun.ipyrun import RunApp\n",
     "from mf_modules.j_header import markdown_header\n",
     "from mf_modules.pydtype_operations import write_json\n",
     "from mf_modules.file_operations import make_dir"
@@ -17,13 +17,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e06a8eff9c7b461eab22c52a2f246d14",
+       "model_id": "dfabbf2505c945ccb2cc61ca50d85bdd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -44,13 +44,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ebf2c7600dd44aee9e40e77da29a239b",
+       "model_id": "bf92503b2db34ad3bd2d6790b3569326",
        "version_major": 2,
        "version_minor": 0
       },
@@ -64,7 +64,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5c7400ca2a0b4bd5888cfb339fcab205",
+       "model_id": "7f075af0c2af4466b5ea828fd56c197c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -77,15 +77,15 @@
     }
    ],
    "source": [
-    "fdir_inputs = r'C:\\engDev\\git_mf\\ipyrun\\examples\\testjson'\n",
-    "fpth_inputs = r'C:\\engDev\\git_mf\\ipyrun\\examples\\testjson\\test_modelrun.json'\n",
-    "config={\n",
-    "    'fpth_inputs': os.path.realpath(fpth_inputs),\n",
-    "    'fdir_inputs': os.path.realpath(fdir_inputs),\n",
-    "    'fpth_script':os.path.realpath(fpth_script),\n",
-    "    'fdir':NBFDIR,\n",
+    "fdir_inputs = r'C:\\engDev\\git_mf\\ipyrun\\examples\\scripts\\template_inputs'\n",
+    "fpth_inputs = r'C:\\engDev\\git_mf\\ipyrun\\examples\\scripts\\template_inputs\\inputs-create_model_run_file.json'\n",
+    "config = {\n",
+    "        'fpth_inputs': os.path.realpath(fpth_inputs),\n",
+    "        'fdir_inputs': os.path.realpath(fdir_inputs),\n",
+    "        'fpth_script':os.path.realpath(fpth_script),\n",
+    "        'fdir':NBFDIR,\n",
     "    }\n",
-    "r = RunAppModelRun(config)\n",
+    "r = RunApp(config)\n",
     "r"
    ]
   },
@@ -94,9 +94,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
