--- a/ipyrun/_filecontroller.ipynb
+++ b/ipyrun/_filecontroller.ipynb
@@ -34,7 +34,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e11578dd0ed74ff7a154e0d0a5f3d9f1",
+       "model_id": "f47dd9f426874e288426d8faf5b3ce6c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -48,7 +48,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "02ac091589cc403c822b12af89bba029",
+       "model_id": "846ee042f7d54b75b46353a99dd51321",
        "version_major": 2,
        "version_minor": 0
       },
@@ -114,7 +114,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d80cd39e54ff4b5eba83e044d3d03c71",
+       "model_id": "b7aeb2db9d5e42e896743b749c737b63",
        "version_major": 2,
        "version_minor": 0
       },
@@ -128,7 +128,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ec84bd9faebc4228957d8d8274eec974",
+       "model_id": "e39a86919d674827bca25afff47934f8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -194,7 +194,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c672dbcfc6de4840abc0337df84f6ed3",
+       "model_id": "f1d91a46e61744d19429afac73bafb57",
        "version_major": 2,
        "version_minor": 0
       },
@@ -240,7 +240,7 @@
     "import time\n",
     "\n",
     "from mf_modules.pydtype_operations import read_json, read_yaml\n",
-    "from ipyfilechooser import FileChooser\n",
+    "#from ipyfilechooser import FileChooser\n",
     "\n",
     "# from this repo\n",
     "# this is an unpleasant hack. should aim to find a better solution\n",
@@ -634,6 +634,20 @@
     "    display(Markdown('---'))  \n",
     "    display(Markdown('')) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
