--- a/ipyrun/_ipyeditjson.ipynb
+++ b/ipyrun/_ipyeditjson.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
     "    def _update_change(self, change):\n",
     "        value = None\n",
     "        if(self.widget_name == \"DatePicker\"):\n",
-    "            value = self.widget_only.value.strftime('%Y%m%d')\n",
+    "            value = self.widget_only.value.strftime('%Y-%m-%d')\n",
     "        else:\n",
     "            value = self.widget_only.value\n",
     "\n",
@@ -208,7 +208,7 @@
     "        elif self.widget_name == 'ipysheet':\n",
     "            self._ipysheet()\n",
     "        elif self.widget_name == \"DatePicker\":\n",
-    "            value = datetime.strptime(self.kwargs['value'], '%Y%m%d')\n",
+    "            value = datetime.strptime(self.kwargs['value'], '%Y-%m-%d')\n",
     "            self.widget_only = self.widget_lkup[self.widget_name](value=value)\n",
     "        elif self.widget_name == \"DerivedText\":   \n",
     "            self.widget_only = self.widget_lkup[self.widget_name](**self.kwargs)\n",
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -493,15 +493,6 @@
     "            \n",
     "    def _ipython_display_(self):\n",
     "        self._lidi_display()  \n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "class SimpleEditJson(EditListOfDicts):\n",
     "    \"\"\"\n",
     "    inherits EditListOfDicts user input form and manages the reading and \n",
@@ -558,17 +549,7 @@
     "        display(self.out)\n",
     "            \n",
     "    def _ipython_display_(self):\n",
-    "        self.display()  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
-   "outputs": [],
-   "source": [
+    "        self.display()  \n",
     "class EditJson(EditListOfDicts, FileConfigController):\n",
     "    \"\"\"\n",
     "    inherits EditListOfDicts user input form as well FileConfigController \n",
@@ -680,15 +661,7 @@
     "            \n",
     "    def _ipython_display_(self):\n",
     "        self.display()  \n",
-    "        #self._lidi_display()  \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        #self._lidi_display()  \n",
     "class EditMfJson(SelectEditSaveMfJson, EditListOfDicts):\n",
     "    \"\"\"\n",
     "    \n",
@@ -764,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +767,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "86ec058ebdd8440ba1a09c2e137268d7",
+       "model_id": "f6b8b50d8f4b41ee98f8e5284af92754",
        "version_major": 2,
        "version_minor": 0
       },
@@ -808,7 +781,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c02728d333da430e8f01cb31e52b09a7",
+       "model_id": "340a910a85d445babbf11789c96475db",
        "version_major": 2,
        "version_minor": 0
       },
@@ -822,7 +795,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf54c0134e334335a93adfaea6c9dd3f",
+       "model_id": "dda9ce665d364a61a97e8aae6932ef6d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -836,7 +809,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "99d09c9f49e54b3ca471a3cc2ac57349",
+       "model_id": "4e9390af6fd34cc6a2272e8ab7c1cad3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -850,7 +823,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "16bae103a8b54f63a96701a6d2c55d07",
+       "model_id": "e1becd66728f433e8b40348623d27b02",
        "version_major": 2,
        "version_minor": 0
       },
@@ -864,7 +837,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9ac3e561186e48b79addf1fa4c33f8ca",
+       "model_id": "3bf62e2cffaf4c25816b4462d707030a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -878,7 +851,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "975b336f56374901a2a453e387df50a0",
+       "model_id": "8478c1c6c8294f7eac398dd10617846e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -892,7 +865,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bb88d31187944a33be7e72e3b5b857f0",
+       "model_id": "0c14cf4a240144eab026fdff5dc71455",
        "version_major": 2,
        "version_minor": 0
       },
@@ -906,7 +879,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aa06a24b0725409dbcb6a529b6f221ed",
+       "model_id": "eea1eeef564f4cd999fcd175985d43c0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -966,7 +939,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b702568548d04ff5a6bc790e97494cfe",
+       "model_id": "ebfa314cc001495c8c94b6aaaa58b516",
        "version_major": 2,
        "version_minor": 0
       },
@@ -980,7 +953,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b9606680768045b6ac9d32f9aa86ec34",
+       "model_id": "6238a2d4a28042ae90f2717ed9486dd0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -994,7 +967,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "67734347859549a0991524e5c6a5397b",
+       "model_id": "1d71b34d6de748cf8ffebfa75a8ddb90",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1008,7 +981,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b1f9918b87944fd5ac9125de277609b0",
+       "model_id": "1b716a4b4550417ea81424325d1d8dc5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1022,7 +995,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5db7e285a95d4ddda1f04576fd418b96",
+       "model_id": "fd8ec53e8e46428baf870b60f9af040e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1036,7 +1009,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c1ba21ad299f46c088c0919bafa01af5",
+       "model_id": "b47be846651d48849a24767d7dde6f54",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1050,7 +1023,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a82d25f73b5c4d6591e8ec81985d5d2d",
+       "model_id": "5b35e93b039b426e8d4874898ed536ec",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1064,7 +1037,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e4e3ad4ba40048d295d4d76d9ce5ec33",
+       "model_id": "15411f4eff4c4a96aedd8efd7fcb1f16",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1078,7 +1051,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b1dd851ef795414e8ef431b48bbedc52",
+       "model_id": "a296a83fae8042fe9c499aca0caebcdb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1092,7 +1065,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "51c2cfc71e804dea9d896775651a567c",
+       "model_id": "26103531d86e43019eab105a33fff283",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1106,7 +1079,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "17ce8e353ceb4785be0477aba70ee731",
+       "model_id": "7668e9bef6054ad88118b5ad27c48cf0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1166,7 +1139,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "44c3a239d72c4dae95c4ae1e07a68a6e",
+       "model_id": "fc937ad850a548fa86cd1ed7648eb305",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1180,7 +1153,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d7058b0510654c5a8f067448d8b3a2cf",
+       "model_id": "65c8bbf3f89643ed8703b7d8cdc2a310",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1194,7 +1167,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8bcbe53b2c364dd385d2e21437c6568e",
+       "model_id": "da7814b97b314a85b5824cf8b72d6c38",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1254,7 +1227,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3f0ae0355375430c85300573af8f1354",
+       "model_id": "193130ed908947e8902e4c6acc84214a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1268,7 +1241,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7d6007fb95f94564a3cd27d46d5a34ee",
+       "model_id": "d8fd37e5242245748ce386699009aeb0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1282,7 +1255,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "521920fc897146d39853665c015ed70c",
+       "model_id": "7ad1db1a507344e686675479910dcffe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1354,12 +1327,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aa0c1748f0ed40f4a59c349effae3782",
+       "model_id": "6fa947a6f88b40079092cc472b0d29b9",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(HBox(children=(HTML(value='<p>Date Picker</p>'), HBox(children=(DatePicker(value…"
+       "VBox(children=(HBox(children=(HBox(children=(HTML(value='<p>reous foo ous foo st</p>'), HBox(children=(FloatTe…"
       ]
      },
      "metadata": {},
@@ -1368,21 +1341,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1925e1ce075646f794cde869c3022f14",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "88faf5207ccc4e109239b6a26f2f6e27",
+       "model_id": "e4000c597a7e4211a447706b3c6a124c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1396,7 +1355,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d79dd9d5222f4b09b7b2fed12766ab35",
+       "model_id": "0c35b830e6494c58b5d44ce13a547ccf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1410,7 +1369,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2ff0b01b2d8d4eba96961e3ce06c7b89",
+       "model_id": "e5ccab9db9d8430496a76a0ffda38d6e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1424,7 +1383,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8b0b883aae0444d5a3c64b24e2915c01",
+       "model_id": "4ad0d557766c4977861b14859d745978",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1438,7 +1397,49 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2a1ddaea95fe42618266874e141eb579",
+       "model_id": "d50fb45a007f4f6783f487b827180a4f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "47cb0a0805594fdd92586ed4f8c1bd42",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "25544414197d48e68aa6b094e17ee239",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "067276f7cbfe4a89a6c1fe461d11ded1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1498,7 +1499,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "938301c2d96f4ec58d6ce4fbeba6c207",
+       "model_id": "62285e5271a54f0fa9a77672b2e2afa3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1512,7 +1513,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d01de21af30b49a488546291ad16e853",
+       "model_id": "aeccd16aa9e04bc8a3ff6b01b101ce6e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1526,7 +1527,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "48ced510d26e4d8ab598d404a0c70d27",
+       "model_id": "ec97f8ec44734a1fa57479246eb363b8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1586,7 +1587,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4db3db5dd0ba4aa096098581a0c2a0fb",
+       "model_id": "e0ecd7c459f74f20809e1dca487cd966",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1600,7 +1601,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4a8f1e2b75c14bca95005b1d9634672d",
+       "model_id": "3951491d69174539a6a3a8e7567680f2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1699,7 +1700,7 @@
     "    # Example4\n",
     "    # EDIT JSON with DatePicker and DerivedText widgets\n",
     "    NBFDIR = os.path.dirname(os.path.realpath('__file__'))\n",
-    "    fpth = os.path.join(NBFDIR,r'appdata\\inputs\\test-derived-val.json')\n",
+    "    fpth = r'C:\\engDev\\git_mf\\ipyrun\\examples\\scripts\\template_inputs\\inputs-create_model_run_file.json'\n",
     "    li = read_json(fpth)\n",
     "    g = EditListOfDicts(li)\n",
     "    \n",
@@ -1735,6 +1736,13 @@
     "    display(Markdown('---'))  \n",
     "    display(Markdown('')) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
