--- a/ipyrun/_runconfig.ipynb
+++ b/ipyrun/_runconfig.ipynb
@@ -294,6 +294,7 @@
     "            di = {}\n",
     "            for k, v in self.script_outputs_template.items():\n",
     "                di[k] = v\n",
+    "                print(v)\n",
     "                for _k,_v in v.items():\n",
     "                    di[k][_k] = self.config['script_outputs'][k][_k]\n",
     "            return di\n",
@@ -378,6 +379,13 @@
     "    rc = RunConfig(config)\n",
     "    pprint(rc.config)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
